--- a/style.scss
+++ b/style.scss
@@ -56,10 +56,6 @@ li {
     color: $tertiary-button_color;
   }
 
-  &--radius {
-    border-radius: 5%;
-  }
-
 }
 
 .header {
@@ -257,12 +253,11 @@ li {
       }
     }
 
-    #top {
+    .top {
       color: $main-color;
     }
   }
 }
-
 
 //navbar
 
@@ -295,6 +290,29 @@ li {
       font-weight: 500;
       padding-top: 1.5rem;
     }
+  }
+}
+
+
+.simple__content {
+  @include flex-column;
+  gap: 1rem;
+
+  @media (min-width:768px) and (max-width: 1024px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    justify-content: center;
+  }
+}
+
+.simple__content--top {
+  @media (min-width: 1025px) {
+    flex-direction: row;
+    position: absolute;
+    top: 110%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
@@ -414,6 +432,21 @@ li {
   }
 }
 
+
+.cards__container {
+  @include flex-column;
+  padding: 4rem 0;
+  gap: 2rem;
+
+  @media(min-width: 768px) {
+    flex-direction: row;
+  }
+
+  @media (min-width: 1025px) {
+    padding: 4rem 2rem;
+  }
+}
+
 .perfomance__container {
   @include flex-column;
 
@@ -435,6 +468,14 @@ li {
 
     @media (min-width: 1025px) {
       width: 100%;
+    }
+  }
+
+  .simple__content--form {
+    @include flex-column;
+
+    @media (min-width: 1025px) {
+      gap: 0;
     }
   }
 }
@@ -525,6 +566,22 @@ li {
   }
 }
 
+.card__hover__container {
+  //card recent case
+  @include flex-column;
+  gap: 3rem;
+  padding-top: 3rem;
+
+  @media (min-width: 1025px) {
+    flex-direction: row;
+  }
+
+  @media (min-width: 768px) and (max-width: 1024px) {
+    flex-direction: row;
+    gap: 1rem;
+  }
+}
+
 
 
 .reminder {
@@ -592,7 +649,19 @@ li {
   }
 }
 
+.customer__container {
+  @include flex-column;
+  gap: 1.5rem;
+  padding-top: 2rem;
 
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
+
+  @media (min-width: 1025px) {
+    padding: 4.5rem;
+  }
+}
 
 footer {
   @include flex-column;
@@ -743,6 +812,11 @@ footer {
 
           a {
             color: $paragraph_color;
+            transition: 0.3s;
+
+            &:hover {
+              color: $main-color;
+            }
           }
         }
       }
